# griddlers

./: CMakeLists.txt
src/: CMakeLists.txt
src/rule/: CMakeLists.txt  rule.cpp  rule.h
tests/: CMakeLists.txt  test_01.cpp
